--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
@@ -1,8 +1,8 @@
 ﻿<ion-side-menus enable-menu-with-back-views="false">
-    <ion-side-menu-content>
+    <ion-side-menu-content class="match-template">
         <ion-nav-bar class="bar-balanced" align-title="center">
             <ion-nav-buttons side="left">
-                <div class="button button-icon">
+                <div class="button">
                     <img width="35" height="35" src="img/Icons/Trophy.png" />
                     <div class="soccer-number">4
                     </div>
