--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
@@ -13,12 +13,16 @@
             </ion-nav-buttons>
         </ion-nav-bar>
         <ion-tabs class="tabs-dark tabs-top">
-
             <ion-tab title="1">
-                <!-- Tab 1 content -->
-                <ion-nav-view class="XXX" name="MainContent"></ion-nav-view>
+                <ion-view view-title="Welcome">
+                    <ion-content>
+                        <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
+                        <h1>
+                            Tab 1
+                        </h1>
+                    </ion-content>
+                </ion-view>
             </ion-tab>
-
             <ion-tab title="2">
                 <!-- Tab 2 content -->
                 <ion-view view-title="Welcome">
@@ -34,20 +38,10 @@
                 </ion-view>
 
             </ion-tab>
-
             <ion-tab title="3">
-                <!-- Tab 3 content -->
-                <ion-view view-title="Welcome">
-                    <ion-content>
-                        <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
-                        <h1>
-                            Tab 3
-                        </h1>
-                    </ion-content>
-                </ion-view>
+                <ion-nav-view name="MainContent"></ion-nav-view>
             </ion-tab>
             <ion-tab title="4">
-                <!-- Tab 3 content -->
                 <ion-view view-title="Welcome">
                     <ion-content>
                         <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
@@ -58,7 +52,6 @@
                 </ion-view>
             </ion-tab>
             <ion-tab title="5">
-                <!-- Tab 3 content -->
                 <ion-view view-title="Welcome">
                     <ion-content>
                         <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
