Revert models' name for JSON respond.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
@@ -5,40 +5,40 @@
 
             <div class="row padding-bottom">
                 <div class="col col-40 item item-stable ">
-                    <span class="status status-left bg-yellow">+{{ match.teamHome.winningPredictionPoints }}</span>
+                    <span class="status status-left bg-yellow">+{{ match.TeamHome.WinningPredictionPoints }}</span>
                     <div class="text-right padding-vertical">
                         <span class="">
-                            (+{{ match.teamHome.winningPredictionPoints }})
+                            (+{{ match.TeamHome.WinningPredictionPoints }})
                         </span>
                         <span class="team-name">
-                            {{ match.teamHome.name }}
+                            {{ match.TeamHome.Name }}
                         </span>
                         <span class="">
-                            {{ match.teamHome.currentPredictionPoints }}
+                            {{ match.TeamHome.CurrentPredictionPoints }}
                         </span>
                     </div>
                 </div>
                 <div class="col col-20 col-center item item-dark ">
                     <div class="col-center">
-                        <span class="status status-left stable">{{ match.status }}</span>
+                        <span class="status status-left stable">{{ match.Status }}</span>
                         <div class="text-center padding">
-                            <span>{{ match.teamHome.currentScore }}</span>
+                            <span>{{ match.TeamHome.CurrentScore }}</span>
                             <span> - </span>
-                            <span>{{ match.teamAway.currentScore }}</span>
+                            <span>{{ match.TeamAway.CurrentScore }}</span>
                         </div>
                     </div>
                 </div>
                 <div class="col col-40 item item-stable">
-                    <span class="status status-right bg-yellow">+{{ match.teamAway.winningPredictionPoints }}</span>
+                    <span class="status status-right bg-yellow">+{{ match.TeamAway.WinningPredictionPoints }}</span>
                     <div class="text-left padding-vertical">
                         <span class="">
-                            {{ match.teamAway.currentPredictionPoints }}
+                            {{ match.TeamAway.CurrentPredictionPoints }}
                         </span>
                         <span class="team-name">
-                            {{ match.teamAway.name }}
+                            {{ match.TeamAway.Name }}
                         </span>
                         <span class="">
-                            (+{{ match.teamAway.winningPredictionPoints }})
+                            (+{{ match.TeamAway.WinningPredictionPoints }})
                         </span>
                     </div>
                 </div>
