- Config unuse account controller cache
Signed-off-by: Kritsada Dechawantana <kritsada@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </ion-content>
-    <ion-footer-bar align-title="left" class="bar-balanced">
+    <ion-footer-bar align-title="left" class="bar-balanced" ng-class="{hide: accountCtrl.isHideSkipButton}">
         <h1 class="title text-right">
             <a menu-close ng-click="accountCtrl.SkipLogin()" href="#">
                 เริ่มต้นใช้งาน >>
