--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
@@ -11,7 +11,7 @@
         </div>
         <br />
         <form class="text-center">
-            <p class="col row font-large">
+            <p class="col row row ">
                <b>ซื้อคูปอง จำนวน</b> 
             </p>
             <div class="col row">
@@ -20,7 +20,7 @@
                 </p>
             </div>
             <div class="col row">
-                <a href="#/buyticketcompleted/buyticketcompleted" class="button bg-yellow col col-50 button-small block-center font-large">
+                <a href="#/buyticketcompleted/buyticketcompleted" class="button bg-yellow col col-50 button-small block-center ">
                     ส่งคูปองลุ้นรางวัล
                 </a>
             </div>
