implement Match tabs

--- a/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
+++ b/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
@@ -330,3 +330,10 @@ ion-modal-view{
     margin-top: initial;
     padding-top: initial;
 }
+
+.match-template span.tab-title.ng-binding{
+    margin-top: 4px !important;
+    line-height: 20px !important;
+    display: block !important;
+}
+
