- Add example modal
Signed-off-by: Kritsada Dechawantana <kritsada@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/MatchPopup.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/MatchPopup.html
@@ -7,7 +7,7 @@
         <div class="row row-center">
             <div class="col col-center">
                 <div class="">
-                    <button class="button block-center col col-50 button-dark" ng-click="modal.hide()">ปิด</button>
+                    <button class="button block-center col col-50 button-dark" ng-click="MatchPopup.hide()">ปิด</button>
                 </div>
             </div>
         </div>
