--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
@@ -29,7 +29,7 @@
                     <ion-content>
                         <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
                         <div class="buttons">
-                            <button class="button button-dark" ng-click="matchCtrl.openModal()">Modal</button>
+                            <button class="button button-dark" ng-click="MatchPopup.show()">Modal</button>
                         </div>
                         <h1>
                             Tab 2
